tests/ui/imports/redundant-import-issue-121915-2015.stderr
error: the item `aux_issue_121915` is imported redundantly
  --> $DIR/redundant-import-issue-121915-2015.rs:8:9
   |
LL | extern crate aux_issue_121915;
   | ------------------------------ the item `aux_issue_121915` is already imported here
...
LL |     use aux_issue_121915;
   |         ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/redundant-import-issue-121915-2015.rs:6:8
   |
LL | #[deny(unused_imports)]
   |        ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

